# photometric-stereo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_pointsets.py  denoise-old.py  denoise-pcl.py  denoise.py  densify_depth.py  extract_image.py  find_valid_views.py  gen-cube.py  mesh.py  pba.cpp  preprocess.py  reduce_noise-2.py  reduce_noise.py  render_points.py  sfm_view.py  test_mesh.py  warp.py
archlinux/: .gitignore
archlinux/ceres-solver-git/: .gitignore  PKGBUILD
archlinux/fssr-git/: .gitignore  PKGBUILD
archlinux/mve-git/: .gitignore  PKGBUILD  mve-config.cmake
brew/: mve.rb
cmake/: depends.cmake
mve/: .gitignore  mve.c  mve.pyx  setup.py  test.py  util.pxd
mve/base/: __init__.pxd  camera_info.pxd  image_base.pxd  scene.pxd  triangle_mesh.pxd  view.pxd
mve/mve/: core.pyx
mve/mve/base/: image_base.pxd  scene.pxd  triangle_mesh.pxd  view.pxd
mve/mve/util/: ref_ptr.pxd
mve/src/core/: camera.cpp  image_base.cpp  image_base.h  module.cpp  ref_ptr.h  scene.cpp  scene.h  view.cpp  view.h
mve/util/: __init__.pxd
osx-brew/: mve.rb  pcl.rb
pba/: CMakeLists.txt  pba.cpp
viewer/: CMakeLists.txt  viewer.cpp
warp3d/: CMakeLists.txt  app_settings.cpp  app_settings.h  main.cpp  warping.cpp  warping.h
